<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_blue"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_phone_title" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:background="@drawable/shape_bg_blue"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingRight="15dp"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/ic_tips_fir"
                android:drawablePadding="10dp"
                android:text="@string/text_title_fir"
                android:textColor="@color/white"
                android:textSize="24sp">

            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!-- 第一行 -->
                <TextView
                    android:id="@+id/tv_show_tips_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_details1"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_show_tips_f_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/tv_show_tips_f"
                    android:text="@string/text_details1_info"
                    android:textSize="24sp" />
                <!-- 第二行 -->
                <TextView
                    android:id="@+id/tv_show_tips_f2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/tv_show_tips_f"
                    android:text="@string/text_details2"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_show_tips_f2_info1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/tv_show_tips_f2"
                    android:layout_below="@+id/tv_show_tips_f_info"
                    android:text="@string/text_details2_android_ios"
                    android:textSize="24sp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableLeft="@mipmap/ic_tips_sec"
                android:drawablePadding="10dp"
                android:text="@string/text_title_sed"
                android:textColor="@color/white"
                android:textSize="24sp">

            </TextView>

            <TextView
                android:id="@+id/tv_show_tips_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_details_tips"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lla_qrc_show"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_weight="4"
            android:background="@drawable/shape_bg_blue"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:id="@+id/my_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ssidname"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/ssidinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/my_name"
                    android:paddingLeft="5dip"
                    android:singleLine="true"
                    android:textColor="@color/text_yellow"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/my_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/my_name"
                    android:layout_alignRight="@+id/my_name"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ssidpwd"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/ssidpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ssidinfo"
                    android:layout_alignTop="@+id/my_password"
                    android:layout_marginLeft="6dp"
                    android:layout_toRightOf="@+id/my_password"
                    android:text=""
                    android:textColor="@color/text_yellow"
                    android:textSize="20sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/ssd_passow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ssidpwd"
                android:textColor="@color/text_yellow"
                android:textSize="20dp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_qrs_bg"
                android:orientation="horizontal">

                <com.skyworth.dlna_qr.view.QRCView
                    android:id="@+id/qr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="20px"
                    android:layout_marginRight="20px"
                    android:layout_marginBottom="20px" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>